Fix split content area overflow on Windows

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -36,6 +36,7 @@ body {
 .split-content-area {
   display: flex;
   height: 100%;
+  overflow-y: hidden;
 
   .#{$ns}-divider {
     margin: 0 $pt-grid-size;
